discussion/kv_engine/163784/163784_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48925 2/3: Change visitBucket() to pass VBucket&, not shared_ptr

Patch 2/3 in addressing the user-after free issue highlighted in
MB-48925.

To minimise the chance of misuse of the vbucket argument passed via
the visit() method; change it from a VBucketPtr (aka
shared_ptr<VBucket>) to VBucket&. This means the caller cannot
accidently retain a refcount on the VBucket.

Change-Id: I5f16e71858cc6ec78f6addd27a8aaf5a82500c46

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-10-19 10:20:01.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-19 10:38:48.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15446/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15446/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23489/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41241/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\evp_engine_test.cc(529): error C3668: "EventuallyPersistentEngineTest_MB48925_ScheduleTaskAfterUnregistered_Test::TestBody::TestVisitor::visitBucket": method with override specifier "override" did not override any base class methods ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41241/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13558/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13558/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13558/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3260/ : FAILURE

Compile error at [2021-10-19T10:31:55.761Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:529:14:
error: ?void EventuallyPersistentEngineTest_MB48925_ScheduleTaskAfterUnregistered_Test::TestBody()::TestVisitor::visitBucket(const VBucketPtr&)? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3260/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3191/ : FAILURE

Compile error at [2021-10-19T10:33:14.953Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:529:48:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3191/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14326/ : FAILURE

Compile error at [2021-10-19T10:27:07.768Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:529:48:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14326/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15168/ : FAILURE

Compile error at [2021-10-19T10:37:17.851Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:529:14:
error: ?void EventuallyPersistentEngineTest_MB48925_ScheduleTaskAfterUnregistered_Test::TestBody()::TestVisitor::visitBucket(const VBucketPtr&)? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15168/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16096/ : FAILURE

Compile error at [2021-10-19T10:34:23.872Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:529:48:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16096/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35047/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12357/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
